--- a/styles/_skills.scss
+++ b/styles/_skills.scss
@@ -1,7 +1,7 @@
 @use './variables' as *;
 
 .skills {
-    min-height: 50vh;
+    min-height: 60vh;
     background-color: $lightBlue;
 }
 
@@ -18,7 +18,7 @@
     font-style: italic;
     font-size: 5rem;
     margin-bottom: 1rem;
-    padding-top: 3rem;
+    padding-top: 4rem;
 }
 
 .skills ul li {
@@ -38,7 +38,7 @@
 @media (max-width: 980px){
 
     .skills {
-        height: 60vh;
+        height: 80vh;
     }
 
     .skills h2 {
@@ -54,13 +54,13 @@
 
 @media (max-width: 560px) {
     .skills {
-        height: 80vh;
+        height: 90vh;
     }
 }
 
 @media(max-width: 380px) {
     .skills {
-        height: 90vh;
+        height: 100vh;
     }
 
     .skills h2 {
@@ -70,6 +70,6 @@
 
 @media (max-width: 335px) {
     .skills {
-        height: 100vh;
+        height: 110vh;
     }
 }
