--- a/styles/style.css
+++ b/styles/style.css
@@ -142,6 +142,28 @@ h1 {
     height: 5rem;
   }
 }
+html {
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  -webkit-clip-path: inset(100%);
+          clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -191,7 +213,7 @@ a:hover {
 }
 
 .about {
-  height: 50vh;
+  height: 70vh;
   background-color: #F2F4F5;
 }
 
@@ -224,7 +246,7 @@ a:hover {
 }
 @media (max-width: 750px) {
   .about {
-    height: 70vh;
+    height: 80vh;
   }
 }
 @media (max-width: 620px) {
@@ -237,7 +259,7 @@ a:hover {
     font-size: 4.5rem;
   }
   .about {
-    height: 80vh;
+    height: 90vh;
   }
 }
 @media (max-width: 470px) {
@@ -245,7 +267,7 @@ a:hover {
     padding-top: 3rem;
   }
   .about {
-    height: 90vh;
+    height: 100vh;
   }
 }
 @media (max-width: 425px) {
@@ -253,9 +275,6 @@ a:hover {
     text-align: center;
     line-height: 4rem;
     margin-bottom: 1rem;
-  }
-  .about {
-    height: 90vh;
   }
 }
 @media (max-width: 385px) {
@@ -267,7 +286,7 @@ a:hover {
   }
 }
 .skills {
-  min-height: 50vh;
+  min-height: 60vh;
   background-color: #DFE0FC;
 }
 
@@ -284,7 +303,7 @@ a:hover {
   font-style: italic;
   font-size: 5rem;
   margin-bottom: 1rem;
-  padding-top: 3rem;
+  padding-top: 4rem;
 }
 
 .skills ul li {
@@ -303,7 +322,7 @@ a:hover {
 
 @media (max-width: 980px) {
   .skills {
-    height: 60vh;
+    height: 80vh;
   }
   .skills h2 {
     padding-top: 4rem;
@@ -316,12 +335,12 @@ a:hover {
 }
 @media (max-width: 560px) {
   .skills {
-    height: 80vh;
+    height: 90vh;
   }
 }
 @media (max-width: 380px) {
   .skills {
-    height: 90vh;
+    height: 100vh;
   }
   .skills h2 {
     padding-top: 6rem;
@@ -329,7 +348,7 @@ a:hover {
 }
 @media (max-width: 335px) {
   .skills {
-    height: 100vh;
+    height: 110vh;
   }
 }
 .projects {
